<resources>
    <string name="app_name">Ratatouille</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="ConfirmPasswordText">Confirm Password</string>
    <string name="SignUpBtnText">Sign Up</string>
    <string name="alreadyAccText">Already have account ? </string>
    <string name="Login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_name">Item Name</string>
    <string name="meal_title">Meal Title</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="step_by_step_instructions_go_here">Step-by-step instructions go here.</string>
    <string name="video">Video</string>
    <string name="healthy_taco_salad_with_fresh_vegetable">Healthy Taco Salad with fresh vegetable</string>
    <string name="favorite">Favorite</string>
    <string name="categories">Categories</string>
    <string name="area">Area</string>
    <string name="previous_week">Previous Week</string>
    <string name="aug_19_aug_25">Aug 19 - Aug 25</string>
    <string name="next_week">Next Week</string>
    <string name="monday">Monday</string>
    <string name="no_meals_added">No meals added.</string>
    <string name="tuseday">Tuseday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="logout">Logout</string>
    <string name="textview">TextView</string>
    <string name="restore">restore</string>
    <string name="backup">backup</string>
    <string name="name">Name</string>
    <string name="cancel">cancel</string>
    <string name="this_week">This Week</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="tu">TU</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="su">SU</string>
    <string name="default_web_client_id">767860070457-p0al3bd54fjl13d4bk6m7h48oki8k7lf.apps.googleusercontent.com</string>
</resources>


